crates/compiler/parser/tests/snapshots/statements::if_statement_simple.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { if (condition) { x = 1; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        If {
                            condition: Spanned(
                                Identifier(
                                    Spanned(
                                        "condition",
                                        18..27,
                                    ),
                                ),
                                18..27,
                            ),
                            then_block: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Assignment {
                                                lhs: Spanned(
                                                    Identifier(
                                                        Spanned(
                                                            "x",
                                                            31..32,
                                                        ),
                                                    ),
                                                    31..32,
                                                ),
                                                rhs: Spanned(
                                                    Literal(
                                                        1,
                                                    ),
                                                    35..36,
                                                ),
                                            },
                                            31..37,
                                        ),
                                    ],
                                ),
                                29..39,
                            ),
                            else_block: None,
                        },
                        14..39,
                    ),
                ],
            },
            0..41,
        ),
    ),
]
