crates/compiler/parser/tests/snapshots/statements::if_statement_with_else.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { if (a == b) { return a; } else { return b; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        If {
                            condition: Spanned(
                                BinaryOp {
                                    op: Eq,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                18..19,
                                            ),
                                        ),
                                        18..19,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "b",
                                                23..24,
                                            ),
                                        ),
                                        23..24,
                                    ),
                                },
                                18..24,
                            ),
                            then_block: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Return {
                                                value: Some(
                                                    Spanned(
                                                        Identifier(
                                                            Spanned(
                                                                "a",
                                                                35..36,
                                                            ),
                                                        ),
                                                        35..36,
                                                    ),
                                                ),
                                            },
                                            28..37,
                                        ),
                                    ],
                                ),
                                26..39,
                            ),
                            else_block: Some(
                                Spanned(
                                    Block(
                                        [
                                            Spanned(
                                                Return {
                                                    value: Some(
                                                        Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "b",
                                                                    54..55,
                                                                ),
                                                            ),
                                                            54..55,
                                                        ),
                                                    ),
                                                },
                                                47..56,
                                            ),
                                        ],
                                    ),
                                    45..58,
                                ),
                            ),
                        },
                        14..58,
                    ),
                ],
            },
            0..60,
        ),
    ),
]
