crates/compiler/parser/tests/snapshots/statements::index_assignment.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { arr[0] = item; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        Identifier(
                                            Spanned(
                                                "arr",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    index: Spanned(
                                        Literal(
                                            0,
                                        ),
                                        16..17,
                                    ),
                                },
                                12..17,
                            ),
                            rhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "item",
                                        21..25,
                                    ),
                                ),
                                21..25,
                            ),
                        },
                        12..26,
                    ),
                ],
            },
            0..28,
        ),
    ),
]
