crates/compiler/parser/tests/snapshots/statements::let_statement_with_expression.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { let result = a + b * c; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "result",
                                    18..24,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                27..28,
                                            ),
                                        ),
                                        27..28,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: Mul,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        31..32,
                                                    ),
                                                ),
                                                31..32,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        35..36,
                                                    ),
                                                ),
                                                35..36,
                                            ),
                                        },
                                        31..36,
                                    ),
                                },
                                27..36,
                            ),
                        },
                        14..37,
                    ),
                ],
            },
            0..39,
        ),
    ),
]
