crates/compiler/parser/tests/snapshots/statements::let_tuple_destructuring_three_elements.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { let (a, b, c) = (10, 20, 30); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            pattern: Tuple(
                                [
                                    Spanned(
                                        "a",
                                        19..20,
                                    ),
                                    Spanned(
                                        "b",
                                        22..23,
                                    ),
                                    Spanned(
                                        "c",
                                        25..26,
                                    ),
                                ],
                            ),
                            statement_type: None,
                            value: Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                10,
                                            ),
                                            31..33,
                                        ),
                                        Spanned(
                                            Literal(
                                                20,
                                            ),
                                            35..37,
                                        ),
                                        Spanned(
                                            Literal(
                                                30,
                                            ),
                                            39..41,
                                        ),
                                    ],
                                ),
                                30..42,
                            ),
                        },
                        14..43,
                    ),
                ],
            },
            0..45,
        ),
    ),
]
