crates/compiler/parser/tests/snapshots/statements::let_tuple_destructuring_two_elements.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { let (x, y) = (1, 2); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            pattern: Tuple(
                                [
                                    Spanned(
                                        "x",
                                        19..20,
                                    ),
                                    Spanned(
                                        "y",
                                        22..23,
                                    ),
                                ],
                            ),
                            statement_type: None,
                            value: Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                1,
                                            ),
                                            28..29,
                                        ),
                                        Spanned(
                                            Literal(
                                                2,
                                            ),
                                            31..32,
                                        ),
                                    ],
                                ),
                                27..33,
                            ),
                        },
                        14..34,
                    ),
                ],
            },
            0..36,
        ),
    ),
]
