crates/compiler/parser/tests/snapshots/statements::let_tuple_destructuring_with_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { let (x, y): (felt, felt) = (1, 2); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Tuple(
                                [
                                    Spanned(
                                        "x",
                                        19..20,
                                    ),
                                    Spanned(
                                        "y",
                                        22..23,
                                    ),
                                ],
                            ),
                            statement_type: Some(
                                Tuple(
                                    [
                                        Named(
                                            "felt",
                                        ),
                                        Named(
                                            "felt",
                                        ),
                                    ],
                                ),
                            ),
                            value: Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                1,
                                            ),
                                            42..43,
                                        ),
                                        Spanned(
                                            Literal(
                                                2,
                                            ),
                                            45..46,
                                        ),
                                    ],
                                ),
                                41..47,
                            ),
                        },
                        14..48,
                    ),
                ],
            },
            0..50,
        ),
    ),
]
