crates/compiler/parser/tests/snapshots/statements::local_statement_with_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { local x: felt = 42; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Local {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    18..19,
                                ),
                            ),
                            ty: Some(
                                Named(
                                    "felt",
                                ),
                            ),
                            value: Spanned(
                                Literal(
                                    42,
                                ),
                                28..30,
                            ),
                        },
                        12..31,
                    ),
                ],
            },
            0..33,
        ),
    ),
]
