crates/compiler/parser/tests/snapshots/statements::local_statement_without_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { local x = infer_me; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Local {
                            name: Spanned(
                                "x",
                                20..21,
                            ),
                            ty: None,
                            value: Spanned(
                                Identifier(
                                    Spanned(
                                        "infer_me",
                                        24..32,
                                    ),
                                ),
                                24..32,
                            ),
                        },
                        14..33,
                    ),
                ],
            },
            0..35,
        ),
    ),
]
